# umsl-cmp-sci-4500-project-snapshot-2019-04-13

./: CMakeLists.txt
python/core/: __init__.py
python/cozmonaut/: __main__.py  client.py
python/cozmonaut/entry_point/: __init__.py  friend_list.py  friend_remove.py  interact.py
src/: global.c  global.h  main.c  util.h  version.h
src/op/: common.c  common.h  friend_list.c  friend_list.h  friend_remove.c  friend_remove.h  interact.c  interact.h
